test of training

--- a/1_training.ipynb
+++ b/1_training.ipynb
@@ -42,21 +42,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import DatasetDict\n",
+    "def get_text_and_labels (x: dict) -> dict:\n",
+    "  text = x[\"title\"] + \"\\n\" + \"\\n\".join(x[\"abstract\"])\n",
+    "  return {\"text\": text, \"label\": int(x[\"is_selected\"])}\n",
     "\n",
-    "def prepare_dataset(dataset: DatasetDict) -> DatasetDict:\n",
-    "    def get_text_and_labels (x: dict) -> dict:\n",
-    "        text = x[\"title\"] + \"\\n\" + \"\\n\".join(x[\"abstract\"])\n",
-    "        hh_selected = x[\"is_selected\"] and x[\"type\"] == \"hh\"\n",
-    "        vh_selected = x[\"is_selected\"] and x[\"type\"] == \"vh\"\n",
-    "        not_selected = not x[\"is_selected\"]\n",
-    "        return {\"text\": text, \"labels\": [hh_selected or vh_selected, not_selected]}\n",
-    "\n",
-    "    return dataset.map(get_text_and_labels).remove_columns([\"pmid\", \"title\", \"journal\", \"abstract\", \"authors\"])\n",
-    "\n",
-    "datasets = [prepare_dataset(dataset) for dataset in datasets]\n",
+    "datasets = [dataset.map(get_text_and_labels) for dataset in datasets]\n",
     "\n",
     "datasets[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079416c3",
+   "metadata": {},
+   "source": [
+    "# Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2c07ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
+    "\n",
+    "checkpoint = \"bert-base-uncased\"\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "\n",
+    "def tokenize_text(x):\n",
+    "  return tokenizer(x[\"text\"], truncation=True)\n",
+    "\n",
+    "dataset = datasets[0].map(tokenize_text, batched=True)\n",
+    "\n",
+    "training_args = TrainingArguments(\"test-trainer\")\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "  model,\n",
+    "  training_args,\n",
+    "  train_dataset=dataset[\"train\"],\n",
+    "  eval_dataset=dataset[\"validation\"],\n",
+    "  processing_class=tokenizer,\n",
+    ")\n",
+    "\n",
+    "trainer.train()\n"
    ]
   }
  ],
