finished training and evaluation

--- a/0_processing.ipynb
+++ b/0_processing.ipynb
@@ -15,40 +15,135 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset(\"json\", data_files=\"./datasets/raw.jsonl\", split=\"train\")\n",
+    "dataset_raw = load_dataset(\"json\", data_files=\"./datasets/raw.jsonl\", split=\"train\")\n",
     "\n",
-    "dataset"
+    "dataset_raw"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c76e09d-070e-410c-87fc-df81af726106",
+   "id": "9ff407ec",
    "metadata": {},
    "source": [
-    "# Filtering the short abstracts (< 30 words)"
+    "# Remove hh examples and type column"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2922b55f-eb33-4814-956e-10a2179e8605",
+   "id": "0b17ef9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def abstract_has_30_words(x: dict) -> bool:\n",
-    "  if (len(x[\"abstract\"]) == 0):\n",
-    "    return False\n",
-    "  \n",
-    "  words = \" \".join(x[\"abstract\"]).split()\n",
+    "dataset_formated = dataset_raw.filter(lambda x: x[\"type\"] == \"vh\").remove_columns(\n",
+    "    [\"type\"]\n",
+    ")\n",
     "\n",
-    "  return len(words) >= 30\n",
+    "dataset_formated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561d6591",
+   "metadata": {},
+   "source": [
+    "# Format the examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8b96cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import html\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
-    "dataset = dataset.filter(abstract_has_30_words)\n",
     "\n",
-    "dataset"
+    "# unescape html characters and remove html tags.\n",
+    "format_text = lambda x: BeautifulSoup(html.unescape(x), \"html.parser\").get_text()\n",
+    "\n",
+    "\n",
+    "def format_exemples(x):\n",
+    "    # format title.\n",
+    "    x[\"title\"] = format_text(x[\"title\"])\n",
+    "    # replace the abstract part list by a string and format it.\n",
+    "    x[\"abstract\"] = format_text(\" \".join(x[\"abstract\"]))\n",
+    "    # add number of words in title and abstract.\n",
+    "    title_num_words = len(x[\"title\"].split())\n",
+    "    abstract_num_words = len(x[\"abstract\"].split())\n",
+    "    x[\"title_num_words\"] = title_num_words\n",
+    "    x[\"abstract_num_words\"] = abstract_num_words\n",
+    "    x[\"total_num_words\"] = title_num_words + abstract_num_words\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "dataset_formatted = dataset_formated.map(format_exemples)\n",
+    "\n",
+    "dataset_formatted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cee6cd8",
+   "metadata": {},
+   "source": [
+    "# Filter the dataset title and abstract size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20c2544d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_examples(x):\n",
+    "    if x[\"title_num_words\"] == 0:\n",
+    "        return False\n",
+    "    if x[\"abstract_num_words\"] < 30:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "dataset_formatted = dataset_formatted.filter(filter_examples)\n",
+    "\n",
+    "dataset_formatted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68588ccb",
+   "metadata": {},
+   "source": [
+    "# Inspect balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5eb81c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# filters for each label.\n",
+    "pos_filter = lambda x: x[\"is_selected\"]\n",
+    "neg_filter = lambda x: not x[\"is_selected\"]\n",
+    "\n",
+    "pos = dataset_formatted.filter(pos_filter)\n",
+    "neg = dataset_formatted.filter(neg_filter)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.set_title(\"Number of examples per label\")\n",
+    "ax.pie([len(pos), len(neg)], labels=[f\"pos {len(pos)}\", f\"neg {len(neg)}\"])\n",
+    "\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -56,7 +151,7 @@
    "id": "d9cf1a49-a77e-44a6-8923-1a5d1ee63dc0",
    "metadata": {},
    "source": [
-    "# Randomly sample 5 balanced datasets"
+    "# Create train, eval and test splits"
    ]
   },
   {
@@ -69,58 +164,54 @@
     "from datasets import DatasetDict, Dataset, concatenate_datasets\n",
     "\n",
     "# helper function to split a given number (n: int) or by a given % (n: float).\n",
-    "def split_dataset(d: Dataset, n: int|float, seed = 42) -> tuple[Dataset, Dataset]:\n",
-    "  splitted = d.train_test_split(n, seed=seed)\n",
-    "  return splitted[\"test\"], splitted[\"train\"]\n",
+    "def split_dataset(d: Dataset, n: int | float, seed=42) -> tuple[Dataset, Dataset]:\n",
+    "    splitted = d.train_test_split(n, seed=seed)\n",
+    "    return splitted[\"train\"], splitted[\"test\"]\n",
     "\n",
-    "# filters for each label.\n",
-    "hh_pos_filter = lambda x: x[\"type\"] == \"hh\" and x[\"is_selected\"]\n",
-    "vh_pos_filter = lambda x: x[\"type\"] == \"vh\" and x[\"is_selected\"]\n",
-    "xx_neg_filter = lambda x: not x[\"is_selected\"]\n",
     "\n",
-    "def sample_balanced_datasets(dataset: Dataset, n = 5, test_size: int|float = 0.1, seed = 42) -> list[DatasetDict]:\n",
-    "  # get the examples of each label.\n",
-    "  hh_pos = dataset.filter(hh_pos_filter)\n",
-    "  vh_pos = dataset.filter(vh_pos_filter)\n",
-    "  xx_neg = dataset.filter(xx_neg_filter)\n",
+    "# helper function to sample a dataset into train, eval and test datasets.\n",
+    "def sample_dataset(dataset: Dataset, test_ratio: float = 0.1, seed=42) -> DatasetDict:\n",
+    "    # get the examples of each label.\n",
+    "    pos_train = dataset.filter(pos_filter)\n",
+    "    neg_train = dataset.filter(neg_filter)\n",
     "\n",
-    "  # get 10% of positive examples for test dataset.\n",
-    "  hh_pos_test, hh_pos_tmp = split_dataset(hh_pos, test_size, seed)\n",
-    "  vh_pos_test, vh_pos_tmp = split_dataset(vh_pos, test_size, seed)\n",
+    "    # total number in each split.\n",
+    "    pos_num = len(pos_train)\n",
+    "    neg_num = len(neg_train)\n",
     "\n",
-    "  # get the numbers of positive examples.\n",
-    "  hh_pos_test_num = len(hh_pos_test)\n",
-    "  vh_pos_test_num = len(vh_pos_test)\n",
-    "  xx_pos_test_num = hh_pos_test_num + vh_pos_test_num\n",
+    "    # test number for each split.\n",
+    "    pos_num_test = int(pos_num * test_ratio)\n",
+    "    neg_num_test = int(neg_num * test_ratio)\n",
     "\n",
-    "  # get as much negative examples as positive test examples.\n",
-    "  xx_neg_test, xx_neg_tmp = split_dataset(xx_neg, xx_pos_test_num, seed)\n",
+    "    # get 10% of examples for test dataset.\n",
+    "    pos_train, pos_test = split_dataset(pos_train, pos_num_test, seed)\n",
+    "    neg_train, neg_test = split_dataset(neg_train, neg_num_test, seed)\n",
     "\n",
-    "  # create the test dataset.\n",
-    "  test_dataset = concatenate_datasets([hh_pos_test, vh_pos_test, xx_neg_test]).shuffle(seed=seed) # (should be shuffled so data is not ordered by labels?)\n",
+    "    # get 10% of examples for validation dataset.\n",
+    "    pos_train, pos_eval = split_dataset(pos_train, pos_num_test, seed)\n",
+    "    neg_train, neg_eval = split_dataset(neg_train, neg_num_test, seed)\n",
     "\n",
-    "  # now sample 5 times 10% of tmp datasets for train/validation datasets.\n",
-    "  datasets = []\n",
+    "    # r = the number of time to repeat the positive train examples.\n",
+    "    # extrapolate r times new examples from positive train exemples.\n",
+    "    # concatenate all train datasets into a single one.\n",
+    "    r = neg_num_test // pos_num_test\n",
+    "    pos_train_list = [pos_train for _ in range(r)]\n",
+    "    dataset_train = concatenate_datasets(pos_train_list + [neg_train]).shuffle(seed)\n",
     "\n",
-    "  for i in range(5):\n",
-    "    hh_pos_validation, hh_pos_train = split_dataset(hh_pos_tmp, hh_pos_test_num, seed + i)\n",
-    "    vh_pos_validation, vh_pos_train = split_dataset(vh_pos_tmp, vh_pos_test_num, seed + i)\n",
+    "    # create stratified eval and test datasets.\n",
+    "    dataset_eval = concatenate_datasets([pos_eval, neg_eval]).shuffle(seed)\n",
+    "    dataset_test = concatenate_datasets([pos_test, neg_test]).shuffle(seed)\n",
     "\n",
-    "    xx_pos_train_num = len(hh_pos_train) + len(vh_pos_train)\n",
-    "\n",
-    "    xx_neg_train, xx_neg_tmp = split_dataset(xx_neg_tmp, xx_pos_train_num, seed + i)\n",
-    "    xx_neg_validation, _ = split_dataset(xx_neg_tmp, xx_pos_test_num, seed + i)\n",
-    "\n",
-    "    datasets.append(DatasetDict({\n",
-    "      \"train\": concatenate_datasets([hh_pos_train, vh_pos_train, xx_neg_train]).shuffle(seed=seed + i),\n",
-    "      \"validation\": concatenate_datasets([hh_pos_validation, vh_pos_validation, xx_neg_validation]).shuffle(seed=seed + i),\n",
-    "      \"test\": test_dataset,\n",
-    "    }))\n",
-    "\n",
-    "  return datasets\n",
-    "\n",
-    "# sample 5 balanced datasets.\n",
-    "datasets = sample_balanced_datasets(dataset)\n"
+    "    # return a single dataset.\n",
+    "    return DatasetDict(\n",
+    "        {\n",
+    "            \"train\": dataset_train,\n",
+    "            \"eval\": dataset_eval,\n",
+    "            \"test\": dataset_test,\n",
+    "        }\n",
+    "    )\n",
+    "# sample train, eval and test datasets.\n",
+    "dataset = sample_dataset(dataset_formatted)"
    ]
   },
   {
@@ -128,60 +219,151 @@
    "id": "433c9ae1",
    "metadata": {},
    "source": [
-    "# Inspect the 5 balanced datasets"
+    "# Inspect the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f019285",
+   "id": "fd80b269",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inspect each datasets.\n",
-    "for d in datasets:\n",
-    "  len11 = len(d[\"train\"].filter(hh_pos_filter))\n",
-    "  len12 = len(d[\"train\"].filter(vh_pos_filter))\n",
-    "  len13 = len(d[\"train\"].filter(xx_neg_filter))\n",
-    "  slice1 = d[\"train\"].select(range(3))\n",
+    "pos_train = dataset[\"train\"].filter(pos_filter)\n",
+    "neg_train = dataset[\"train\"].filter(neg_filter)\n",
+    "pos_eval = dataset[\"eval\"].filter(pos_filter)\n",
+    "neg_eval = dataset[\"eval\"].filter(neg_filter)\n",
+    "pos_test = dataset[\"test\"].filter(pos_filter)\n",
+    "neg_test = dataset[\"test\"].filter(neg_filter)\n",
     "\n",
-    "  len21 = len(d[\"validation\"].filter(hh_pos_filter))\n",
-    "  len22 = len(d[\"validation\"].filter(vh_pos_filter))\n",
-    "  len23 = len(d[\"validation\"].filter(xx_neg_filter))\n",
+    "print(len(pos_train), len(neg_train))\n",
+    "print(pos_train[range(10)])\n",
+    "print(neg_train[range(10)])\n",
     "\n",
-    "  len31 = len(d[\"test\"].filter(hh_pos_filter))\n",
-    "  len32 = len(d[\"test\"].filter(vh_pos_filter))\n",
-    "  len33 = len(d[\"test\"].filter(xx_neg_filter))\n",
+    "print(len(pos_eval), len(neg_eval))\n",
+    "print(pos_eval[range(10)])\n",
+    "print(neg_eval[range(10)])\n",
     "\n",
-    "  print(len11, len12, len13, len11 + len12 + len13)\n",
-    "  print(d[\"train\"][range(3)])\n",
-    "\n",
-    "  print(len21, len22, len23, len21 + len22 + len23)\n",
-    "  print(d[\"validation\"][range(3)])\n",
-    "\n",
-    "  print(len31, len32, len33, len31 + len32 + len33)\n",
-    "  print(d[\"test\"][range(3)])"
+    "print(len(pos_test), len(neg_test))\n",
+    "print(pos_test[range(10)])\n",
+    "print(neg_test[range(10)])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23159625",
+   "id": "d9c9a156",
    "metadata": {},
    "source": [
-    "# Save all the datasets to disk (full + 5 balanced)"
+    "# Visualize the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef0b26a",
+   "id": "ee2771d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.save_to_disk(\"datasets/dataset_full.hf\")\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "for i, dataset in enumerate(datasets):\n",
-    "  dataset.save_to_disk(f\"datasets/dataset_balanced{i + 1}.hf\")"
+    "fig, (pies, hists1, hists2) = plt.subplots(3, 3, figsize=(15, 7))\n",
+    "\n",
+    "# =========================\n",
+    "pies[0].set_title(\"Train\")\n",
+    "pies[0].pie(\n",
+    "    [len(pos_train), len(neg_train)],\n",
+    "    labels=[f\"pos {len(pos_train)}\", f\"neg {len(neg_train)}\"],\n",
+    ")\n",
+    "\n",
+    "pies[1].set_title(\"Eval\")\n",
+    "pies[1].pie(\n",
+    "    [len(pos_eval), len(neg_eval)],\n",
+    "    labels=[f\"pos {len(pos_eval)}\", f\"neg {len(neg_eval)}\"],\n",
+    ")\n",
+    "\n",
+    "pies[2].set_title(\"Test\")\n",
+    "pies[2].pie(\n",
+    "    [len(pos_test), len(neg_test)],\n",
+    "    labels=[f\"pos {len(pos_test)}\", f\"neg {len(neg_test)}\"],\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "hists1[0].set_ylim(0, 6000)\n",
+    "hists1[0].set_title(\"Num words train pos\")\n",
+    "\n",
+    "x = pos_train[\"total_num_words\"]\n",
+    "mean = np.mean(x)\n",
+    "hists1[0].hist(x, histtype=\"bar\", range=(0, 500), bins=50)\n",
+    "hists1[0].axvline(mean, color=\"r\", linestyle=\"--\")\n",
+    "hists1[0].text(mean + mean / 20, 6000 * 0.8, f\"{mean:.2f}\", color=\"r\")\n",
+    "\n",
+    "hists1[1].set_ylim(0, 60)\n",
+    "hists1[1].set_title(\"Num words eval pos\")\n",
+    "\n",
+    "x = pos_eval[\"total_num_words\"]\n",
+    "mean = np.mean(x)\n",
+    "hists1[1].hist(x, histtype=\"bar\", range=(0, 500), bins=50)\n",
+    "hists1[1].axvline(mean, color=\"r\", linestyle=\"--\")\n",
+    "hists1[1].text(mean + mean / 20, 60 * 0.8, f\"{mean:.2f}\", color=\"r\")\n",
+    "\n",
+    "hists1[2].set_ylim(0, 60)\n",
+    "hists1[2].set_title(\"Num words test pos\")\n",
+    "\n",
+    "x = pos_test[\"total_num_words\"]\n",
+    "mean = np.mean(x)\n",
+    "hists1[2].hist(x, histtype=\"bar\", range=(0, 500), bins=50)\n",
+    "hists1[2].axvline(mean, color=\"r\", linestyle=\"--\")\n",
+    "hists1[2].text(mean + mean / 20, 60 * 0.8, f\"{mean:.2f}\", color=\"r\")\n",
+    "\n",
+    "# =========================\n",
+    "hists2[0].set_ylim(0, 6000)\n",
+    "hists2[0].set_title(\"Num words train neg\")\n",
+    "\n",
+    "x = neg_train[\"total_num_words\"]\n",
+    "mean = np.mean(x)\n",
+    "hists2[0].hist(x, histtype=\"bar\", range=(0, 500), bins=50)\n",
+    "hists2[0].axvline(mean, color=\"r\", linestyle=\"--\")\n",
+    "hists2[0].text(mean + mean / 20, 6000 * 0.8, f\"{mean:.2f}\", color=\"r\")\n",
+    "\n",
+    "hists2[1].set_ylim(0, 700)\n",
+    "hists2[1].set_title(\"Num words eval neg\")\n",
+    "\n",
+    "x = neg_eval[\"total_num_words\"]\n",
+    "mean = np.mean(x)\n",
+    "hists2[1].hist(x, histtype=\"bar\", range=(0, 500), bins=50)\n",
+    "hists2[1].axvline(mean, color=\"r\", linestyle=\"--\")\n",
+    "hists2[1].text(mean + mean / 20, 700 * 0.8, f\"{mean:.2f}\", color=\"r\")\n",
+    "\n",
+    "hists2[2].set_ylim(0, 700)\n",
+    "hists2[2].set_title(\"Num words test neg\")\n",
+    "\n",
+    "x = neg_test[\"total_num_words\"]\n",
+    "mean = np.mean(x)\n",
+    "hists2[2].hist(x, histtype=\"bar\", range=(0, 500), bins=50)\n",
+    "hists2[2].axvline(mean, color=\"r\", linestyle=\"--\")\n",
+    "hists2[2].text(mean + mean / 20, 700 * 0.8, f\"{mean:.2f}\", color=\"r\")\n",
+    "\n",
+    "# =========================\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2499e2db",
+   "metadata": {},
+   "source": [
+    "# Save the dataset to disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7827b8fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.save_to_disk(\"./datasets/abstracts.hf\")"
    ]
   }
  ],
@@ -201,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
