--- a/1_training.ipynb
+++ b/1_training.ipynb
@@ -5,7 +5,26 @@
    "id": "52932a1d-2ffe-4731-aa1e-286c991865e3",
    "metadata": {},
    "source": [
-    "# Load the datasets"
+    "# Set the base model checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c9ce218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the base model checkpoint.\n",
+    "checkpoint = \"microsoft/BiomedNLP-BiomedBERT-base-uncased-abstract\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60efa602",
+   "metadata": {},
+   "source": [
+    "# Load the dataset"
    ]
   },
   {
@@ -17,38 +36,47 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "datasets = []\n",
+    "def get_text_and_labels(x: dict) -> dict:\n",
+    "    text = x[\"title\"] + \"\\n\" + \"\\n\".join(x[\"abstract\"])\n",
+    "    return {\"text\": text, \"label\": int(x[\"is_selected\"])}\n",
     "\n",
-    "for i in range(5):\n",
-    "  datasets.append(load_dataset(\"arrow\", data_files={\n",
-    "    \"train\": f\"datasets/dataset_balanced{i + 1}.hf/train/data-00000-of-00001.arrow\",\n",
-    "    \"validation\": f\"datasets/dataset_balanced{i + 1}.hf/validation/data-00000-of-00001.arrow\",\n",
-    "    \"test\": f\"datasets/dataset_balanced{i + 1}.hf/test/data-00000-of-00001.arrow\",\n",
-    "  }))"
+    "dataset = load_dataset(\n",
+    "    \"arrow\",\n",
+    "    data_files={\n",
+    "        \"train\": f\"datasets/abstracts.hf/train/data-00000-of-00001.arrow\",\n",
+    "        \"eval\": f\"datasets/abstracts.hf/eval/data-00000-of-00001.arrow\",\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "dataset = dataset.map(get_text_and_labels)\n",
+    "\n",
+    "dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2740a7c8-f22a-455b-9fc4-bbd6f2512dec",
+   "id": "2b32d177",
    "metadata": {},
    "source": [
-    "# Prepare the datasets"
+    "# Tokenize the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0907b841-327c-4e74-bbcc-ed16c802eee1",
+   "id": "44af252e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_text_and_labels (x: dict) -> dict:\n",
-    "  text = x[\"title\"] + \"\\n\" + \"\\n\".join(x[\"abstract\"])\n",
-    "  return {\"text\": text, \"label\": int(x[\"is_selected\"])}\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
-    "datasets = [dataset.map(get_text_and_labels) for dataset in datasets]\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint, model_max_length=512)\n",
     "\n",
-    "datasets[0]"
+    "tokenize_text = lambda x: tokenizer(x[\"text\"], truncation=True)\n",
+    "\n",
+    "dataset = dataset.map(tokenize_text, batched=True)\n",
+    "\n",
+    "dataset"
    ]
   },
   {
@@ -66,30 +94,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
-    "\n",
-    "checkpoint = \"bert-base-uncased\"\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
-    "\n",
-    "def tokenize_text(x):\n",
-    "  return tokenizer(x[\"text\"], truncation=True)\n",
-    "\n",
-    "dataset = datasets[0].map(tokenize_text, batched=True)\n",
-    "\n",
-    "training_args = TrainingArguments(\"test-trainer\")\n",
+    "from transformers import (\n",
+    "    AutoModelForSequenceClassification,\n",
+    "    Trainer,\n",
+    "    TrainingArguments,\n",
+    ")\n",
     "\n",
     "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)\n",
     "\n",
-    "trainer = Trainer(\n",
-    "  model,\n",
-    "  training_args,\n",
-    "  train_dataset=dataset[\"train\"],\n",
-    "  eval_dataset=dataset[\"validation\"],\n",
-    "  processing_class=tokenizer,\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"training-logs\",\n",
+    "    eval_steps=1000,\n",
+    "    eval_strategy=\"steps\",\n",
+    "    per_device_eval_batch_size=16,\n",
+    "    per_device_train_batch_size=16,\n",
+    "    num_train_epochs=1,\n",
     ")\n",
     "\n",
-    "trainer.train()\n"
+    "trainer = Trainer(\n",
+    "    model,\n",
+    "    training_args,\n",
+    "    train_dataset=dataset[\"train\"],\n",
+    "    eval_dataset=dataset[\"eval\"],\n",
+    "    processing_class=tokenizer,\n",
+    ")\n",
+    "\n",
+    "trainer.train()\n",
+    "\n",
+    "trainer.save_model(\"trained-model\")"
    ]
   }
  ],
@@ -109,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
