add descriptive paragraphs in the notbooks

--- a/0_preparation.ipynb
+++ b/0_preparation.ipynb
@@ -27,7 +27,9 @@
    "id": "9ff407ec",
    "metadata": {},
    "source": [
-    "# Remove hh examples and type column"
+    "# Remove hh examples and type column\n",
+    "\n",
+    "The HH examples were not manually curated; they are exclusively positive examples extracted from high-throughput publications."
    ]
   },
   {
@@ -49,7 +51,13 @@
    "id": "561d6591",
    "metadata": {},
    "source": [
-    "# Format the examples"
+    "# Format the examples\n",
+    "\n",
+    "Several preprocessing steps are applied to the data:\n",
+    "\n",
+    "- Abstract paragraphs are joined into a single paragraph.\n",
+    "- Unicode characters are unescaped (e.g., Greek letters in biomedical terms), and HTML tags are removed.\n",
+    "- The number of words in the title, abstract, and the total word count are added for convenience."
    ]
   },
   {
@@ -91,7 +99,9 @@
    "id": "9cee6cd8",
    "metadata": {},
    "source": [
-    "# Filter the dataset title and abstract size"
+    "# Filter the dataset title and abstract size\n",
+    "\n",
+    "Only articles with a title and an abstract containing at least 30 words are retained."
    ]
   },
   {
@@ -119,7 +129,9 @@
    "id": "68588ccb",
    "metadata": {},
    "source": [
-    "# Inspect balance"
+    "# Inspect balance\n",
+    "\n",
+    "The dataset is highly unbalanced, with nearly 20 times more negative examples than positive ones."
    ]
   },
   {
@@ -151,7 +163,11 @@
    "id": "d9cf1a49-a77e-44a6-8923-1a5d1ee63dc0",
    "metadata": {},
    "source": [
-    "# Create train, eval and test splits"
+    "# Create train, eval and test splits\n",
+    "\n",
+    "- Evaluation and Test Splits: 10% of the dataset is randomly sampled twice to create evaluation and test splits. The original class imbalance is intentionally preserved to ensure that evaluations reflect real-world conditions.\n",
+    "\n",
+    "- Training Split: To fully utilize the negative examples, a synthetic balanced training split is created by repeating the positive examples approximately 20 times to match the number of negative examples. Training will be conducted over a single epoch, where each negative example appears once, while positive examples are repeated multiple times."
    ]
   },
   {
@@ -254,7 +270,9 @@
    "id": "d9c9a156",
    "metadata": {},
    "source": [
-    "# Visualize the dataset"
+    "# Visualize the dataset\n",
+    "\n",
+    "The dataset splits align with expectations, and the word count distribution is similar across categories. Additionally, the mean word count is around 280 for each category, which is well-suited for language models handling sequences up to 512 tokens."
    ]
   },
   {
