--- a/1_training.ipynb
+++ b/1_training.ipynb
@@ -5,17 +5,20 @@
    "id": "52932a1d-2ffe-4731-aa1e-286c991865e3",
    "metadata": {},
    "source": [
-    "# Set the base model checkpoint"
+    "# Set the base model checkpoint\n",
+    "\n",
+    "The Microsoft BiomedBERT model is well suited for this task, as it is a masked language model trained on PubMed data.\n",
+    "\n",
+    "https://huggingface.co/microsoft/BiomedNLP-BiomedBERT-base-uncased-abstract"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9c9ce218",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the base model checkpoint.\n",
     "checkpoint = \"microsoft/BiomedNLP-BiomedBERT-base-uncased-abstract\""
    ]
   },
@@ -24,7 +27,7 @@
    "id": "60efa602",
    "metadata": {},
    "source": [
-    "# Load the dataset"
+    "# Load the train and eval splits"
    ]
   },
   {
@@ -70,6 +73,7 @@
    "source": [
     "from transformers import AutoTokenizer\n",
     "\n",
+    "# max length must be explicitely defined here because it is not defined in the checkpoint config.\n",
     "tokenizer = AutoTokenizer.from_pretrained(checkpoint, model_max_length=512)\n",
     "\n",
     "tokenize_text = lambda x: tokenizer(x[\"text\"], truncation=True)\n",
@@ -84,7 +88,9 @@
    "id": "079416c3",
    "metadata": {},
    "source": [
-    "# Train the model"
+    "# Train the model\n",
+    "\n",
+    "The model is trained for a single epoch, as the training split contains all negative examples and repeated positive examples. Evaluation is performed on the evaluation split every 1,000 steps."
    ]
   },
   {
