--- a/2_evaluation.ipynb
+++ b/2_evaluation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d54801d5",
+   "metadata": {},
+   "source": [
+    "# Load the test split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c27670bd",
@@ -9,6 +17,10 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
+    "def get_text_and_labels(x: dict) -> dict:\n",
+    "    text = x[\"title\"] + \"\\n\" + \"\\n\".join(x[\"abstract\"])\n",
+    "    return {\"text\": text, \"label\": int(x[\"is_selected\"])}\n",
+    "\n",
     "dataset = load_dataset(\n",
     "    \"arrow\",\n",
     "    data_files={\n",
@@ -16,24 +28,19 @@
     "    },\n",
     ")\n",
     "\n",
+    "dataset = dataset.map(get_text_and_labels)\n",
+    "\n",
     "dataset"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4455f427",
+   "cell_type": "markdown",
+   "id": "294f4a1e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_text_and_labels(x: dict) -> dict:\n",
-    "    text = x[\"title\"] + \"\\n\" + \"\\n\".join(x[\"abstract\"])\n",
-    "    return {\"text\": text, \"label\": int(x[\"is_selected\"])}\n",
+    "# Evaluate the model\n",
     "\n",
-    "\n",
-    "dataset = dataset.map(get_text_and_labels)\n",
-    "\n",
-    "dataset"
+    "The model is evaluated on the test split. The following metrics are computed: accuracy, precision, recall, and F1-score."
    ]
   },
   {
