put notebooks inside a notebooks folder

--- a/notebooks/1_training.ipynb
+++ b/notebooks/1_training.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9c9ce218",
    "metadata": {},
    "outputs": [],
@@ -46,8 +46,8 @@
     "dataset = load_dataset(\n",
     "    \"arrow\",\n",
     "    data_files={\n",
-    "        \"train\": f\"datasets/abstracts.hf/train/data-00000-of-00001.arrow\",\n",
-    "        \"eval\": f\"datasets/abstracts.hf/eval/data-00000-of-00001.arrow\",\n",
+    "        \"train\": \"../datasets/abstracts.hf/train/data-00000-of-00001.arrow\",\n",
+    "        \"eval\": \"../datasets/abstracts.hf/eval/data-00000-of-00001.arrow\",\n",
     "    },\n",
     ")\n",
     "\n",
@@ -109,7 +109,7 @@
     "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)\n",
     "\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"training-logs\",\n",
+    "    output_dir=\"../training-logs\",\n",
     "    eval_steps=1000,\n",
     "    eval_strategy=\"steps\",\n",
     "    per_device_eval_batch_size=16,\n",
@@ -127,7 +127,7 @@
     "\n",
     "trainer.train()\n",
     "\n",
-    "trainer.save_model(\"trained-model\")"
+    "trainer.save_model(\"../trained-model\")"
    ]
   }
  ],
