--- a/notebooks/2_evaluation.ipynb
+++ b/notebooks/2_evaluation.ipynb
@@ -24,7 +24,7 @@
     "dataset = load_dataset(\n",
     "    \"arrow\",\n",
     "    data_files={\n",
-    "        \"test\": f\"datasets/abstracts.hf/test/data-00000-of-00001.arrow\",\n",
+    "        \"test\": \"../datasets/abstracts.hf/test/data-00000-of-00001.arrow\",\n",
     "    },\n",
     ")\n",
     "\n",
@@ -53,8 +53,8 @@
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "from evaluate import evaluator, combine\n",
     "\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\"trained-model\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"trained-model\", model_max_length=512)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"../trained-model\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"../trained-model\", model_max_length=512)\n",
     "\n",
     "task_evaluator = evaluator(\"text-classification\")\n",
     "\n",
@@ -66,8 +66,7 @@
     "    metric=combine([\"accuracy\", \"precision\", \"recall\", \"f1\"]),\n",
     ")\n",
     "\n",
-    "print(eval_result)\n",
-    "\n"
+    "print(eval_result)"
    ]
   }
  ],
