--- a/notebooks/0_preparation.ipynb
+++ b/notebooks/0_preparation.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "dataset_raw = load_dataset(\"json\", data_files=\"./datasets/raw.jsonl\", split=\"train\")\n",
+    "dataset_raw = load_dataset(\"json\", data_files=\"../datasets/raw.jsonl\", split=\"train\")\n",
     "\n",
     "dataset_raw"
    ]
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.save_to_disk(\"./datasets/abstracts.hf\")"
+    "dataset.save_to_disk(\"../datasets/abstracts.hf\")"
    ]
   }
  ],
