--- a/notebooks/1_training.ipynb
+++ b/notebooks/1_training.ipynb
@@ -133,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
